# nav2_omni_pure_pursuit_controller

./: CMakeLists.txt  README.md  nav2_omni_pure_pursuit_controller.xml  nav2_pure_pursuit_controller.xml  package.xml
doc/: An_Interactive_Guide_for_Basic_Pure_Pursuit_Implementation_in_VRC_V2.ipynb
include/nav2_omni_pure_pursuit_controller/: omni_pure_pursuit_controller.hpp
include/nav2_pure_pursuit_controller/: pid.hpp  pure_pursuit_controller.hpp
src/: omni_pure_pursuit_controller.cpp  pid.cpp  pure_pursuit_controller.cpp
test/: CMakeLists.txt  test_regulated_pp.cpp
